# realtime-airline-distributed-database

./: .gitignore  README.md  app.py  helper.py
dev/: add_local.py
edfs/: commands.py  tools.py
infra/: Makefile  README.md  docker-compose.yaml
infra/custom_mysql/: Dockerfile  init.sh  requirements.txt  zk_heartbeat.py
realtime-airline-distributed-database-main/: LICENSE
realtime-airline-distributed-database-main/src/backend/: Dockerfile.data_router  consistent_hashing.py
src/backend/: Dockerfile.data_router  Dockerfile.flightradar_data_producer  Makefile  README.md  consistent_hashing.py  pyproject.toml
src/backend/data_router/clients/: mysql_client.py
src/backend/data_router/consumers/: ingestion_consumer.py
src/backend/data_router/core/: __init__.py  dependencies.py
src/backend/data_router/models/: management.py
src/backend/data_router/modules/db/: db_node_manager.py  query_executor.py
src/backend/data_router/modules/hashing/: consistent_hashing.py
src/backend/data_router/modules/host_management/: host_manager.py
src/backend/data_router/routes/: __init__.py  hello_world.py
src/backend/data_router/routes/database/: mgmt.py
src/backend/data_router/routes/flights/: flight_routes.py
src/backend/data_router/routes/host_management/: hosts.py
src/backend/flightradar_data_producer/: producer.py  run.sh  topic.py
src/ui/: README.md
static/css/: bootstrap.min.css
templates/: analyses.html  database.html  flight_details.html  index.html  top_nav.html  top_nav_flight_details.html
(+7 files in other folders)
